Rework response examples
