# docs/swagger.json
@@ -38,9 +38,9 @@
                 "summary": "Creates shopping cart",
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "Cart created successfully",
                         "schema": {
-                            "$ref": "#/definitions/models.Cart"
+                            "$ref": "#/definitions/models.CreateCartResponse"
                         }
                     },
                     "401": {
@@ -91,7 +91,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Item added to cart successfully",
                         "schema": {
                             "$ref": "#/definitions/models.CartItem"
                         }
@@ -141,9 +141,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Cart retrieved successfully",
                         "schema": {
-                            "$ref": "#/definitions/models.Cart"
+                            "$ref": "#/definitions/models.GetCartResponse"
                         }
                     },
                     "400": {
@@ -200,7 +200,7 @@
                     "200": {
                         "description": "Item removed from cart successfully",
                         "schema": {
-                            "type": "message"
+                            "$ref": "#/definitions/models.RemoveItemMessageResponse"
                         }
                     },
                     "400": {
@@ -239,11 +239,33 @@
                 }
             }
         },
-        "models.Cart": {
+        "models.CartItem": {
+            "type": "object",
+            "properties": {
+                "cart_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "product": {
+                    "type": "string",
+                    "example": "item1"
+                },
+                "quantity": {
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
+        "models.CreateCartResponse": {
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "items": {
                     "type": "array",
@@ -253,28 +275,35 @@
                 }
             }
         },
-        "models.CartItem": {
-            "type": "object",
-            "properties": {
-                "cart_id": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "product": {
-                    "type": "string"
-                },
-                "quantity": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.ErrorResponse": {
             "type": "object",
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "models.GetCartResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CartItem"
+                    }
+                }
+            }
+        },
+        "models.RemoveItemMessageResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Item removed from cart successfully"
                 }
             }
         }
