# internal/models/cart_item.go
@@ -1,8 +1,8 @@
 package models
 
 type CartItem struct {
-	ID       int    `json:"id,omitempty"`
-	CartID   int    `json:"cart_id,omitempty"`
-	Product  string `json:"product"`
-	Quantity int    `json:"quantity"`
+	ID       int    `json:"id" example:"1"`
+	CartID   int    `json:"cart_id" example:"1"`
+	Product  string `json:"product" example:"item1"`
+	Quantity int    `json:"quantity" example:"1"`
 }
